# click-to-call-mac

./: Cargo.toml  Info.plist  README.md  build.sh
src/: main.rs
